--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,18 @@
 name: flutter_motion_ui
-description: "A new Flutter package project."
-version: 0.0.1
-homepage:
+description: "A beautiful collection of 80+ animated Flutter components with smooth motions and modern design trends. Includes buttons, cards, animations, navigation, and more for building stunning Flutter applications."
+version: 1.0.0
+homepage: https://github.com/lyhorngcnb/flutter_motion_ui
+repository: https://github.com/lyhorngcnb/flutter_motion_ui
+issue_tracker: https://github.com/lyhorngcnb/flutter_motion_ui/issues
 
 environment:
-  sdk: ^3.8.1
-  flutter: ">=1.17.0"
+  sdk: ">=3.0.0 <4.0.0"  # ✅ Proper SDK constraint
+  flutter: ">=3.0.0"  # ✅ Updated Flutter constraint
 
 dependencies:
   flutter:
     sdk: flutter
+  vector_math: ^2.1.4  # ✅ Added for animations
 
 dev_dependencies:
   flutter_test:
@@ -21,34 +24,3 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/to/asset-from-package
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/to/font-from-package
